# framework_from_scratch

./: README.md  main_crewai.py  main_langgraph.py  pyproject.toml  run_test_langgraph_workflow.py  test_factory.py
builders/: workflow_builder.py
components/: llm.py  retriever.py  test_retriever.py
components/llms/: azure.py  base.py  bedrock.py  llm_factory.py  ollama.py  openai.py
engines/: base.py  factory.py
engines/crewai/: adaptive_rag.py  simple_rag.py
engines/langgraph/: adaptive_rag.py  simple_rag.py  simple_rag_OLD.py
tests/: test_langgraph_rag_workflow.py
workflows/: base.py  rag.py  reflective_rag.py
workflows_config/: rag_workflow_config.json
